--- a/applications/hello-kenzan/index.html
+++ b/applications/hello-kenzan/index.html
@@ -1,3 +1,3 @@
 <p><h2 style="font-family:sans-serif">Hello from me a tester ! You've successfully built and run the Hello-Kenzan app.</h2> </p>
 <p style="font-family:sans-serif">The Hello-Kenzan app is a modified version of the <a href="https://hub.docker.com/_/nginx/">nginx web server image</a>. If you open up the <b>kubernetes-ci-cd/part1/hello-kenzan/DockerFile</b>, you will note several things:</p>
-<img src="DockerFileEx.jpg"><p style="font-family:sans-serif">For more from Kenzan, check out our <a href="http://techblog.kenzan.com/">blog</a>.</p>
+<img src="DockerFileEx.jpg"><p style="font-family:sans-serif">For more from Kenzan, check out our <a href="http://techblog.kenzan.com/">blog</a>.</p><img src="http://s.quickmeme.com/img/5f/5fc3c18b892dcbd351870b605a6d8ae87aa6f3777eebf5f201ce4e5345d5d309.jpg">
