--- a/applications/hello-kenzan/index.html
+++ b/applications/hello-kenzan/index.html
@@ -1,1 +1,2 @@
 <p><h2 style="font-family:sans-serif">Hello from a Cat Cat, thanks! You've successfully built and run the Hello-Kenzan app.</h2> </p>
+<img src="https://www.praqma.com/images/stories/cool-jenkins.png">
